OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 12:26:26 2022
        + Add an initial regex man page (which is not yet installed),
          `docs/USD.doc/re_format/vi_regex.7`
        + Update `LICENSE.md`; fix email address for `millert@`
        + Simplify `db/sys/issetugid.c` ifdef's
        + Update bundled *OpenBSD* strlcpy to `1.16` (2019/01/25 00:19:25)
        + Update bundled *OpenBSD* reallocarray to `1.3` (2015/09/13 08:31:47)
        + Update bundled *OpenBSD* getopt_long to `1.32` (2020/05/27 22:25:09)
        + Update bundled *OpenBSD* basename to `1.17` (2020/10/20 19:30:14)
        + Add initial *Midipix* support

OpenVi 7.0.9 -> OpenVi 7.0.10: Wed Feb 9 16:36:25 2022
        + Silence some warnings and general style clean-up
        + Clarify text of some visual mode messages; use the POSIX thousands
          numeric seperator for displaying most line and character counts
        + Use `/var/tmp` for the `vi.recover` directory; on most Linux
          systems, this persists across reboots and gives a higher chance
          of recovery than `/tmp` which is often a memory-backed filesystem
        + New feature: If `ruler` is set, print a percentage after position
        + New feature: If `windowname` is set, always show the file name
        + New feature: If `bserase` (abbrev `bse`) is set, then any newly
          backspaced characters are immediately erased from the screen
        + Handle `SIGQUIT` like `SIGINT`, which prevents `^\` (Control-\)
          from causing ex-mode to abort and drop core; aligns closer to
          Vim's behavior in ex-mode - which uses non-canonical input mode,
          so `^\` doesn't cause a stop.  The rationale for this change is
          because we're using `^\` as a shortcut to enter our ex-mode (which
          for `nex` uses standard canonical line-based input), if `SIGQUIT`
          is unhandled, it's easy to abort by accident by sending more than