@@ -1,4 +1,5 @@
 OpenVi 7.0.10 -> OpenVi 7.0.11-dev (Unreleased): Sat Feb 12 12:26:26 2022
+        + Silence a few more warnings; adjust default debugging `CFLAGS`
         + Add an initial regex man page (which is not yet installed),
           `docs/USD.doc/re_format/vi_regex.7`
         + Update `LICENSE.md`; fix email address for `millert@`
